@@ -2,6 +2,7 @@ Contract Configurator 1.0.0
 - Added new AtLeast and AtMost set parameters.
 - Added new None set parameter.
 - Fix issue when reloading contracts within a hierarchy of contract groups.
+- Fix issue when loading a save game with RemoteTech when a previously installed planet pack is uninstalled (thanks Svm420 and magico13).
 
 Contract Configurator 0.7.15
 - Fix for re-loading passengers in tourism contracts (thanks karki and others).
